<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btn_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/goto_collect"
        />

    <Button
        android:id="@+id/btn_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/goto_location"
        />

    <Button
        android:id="@+id/btn_collect_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/goto_collect_history"
        />

</LinearLayout>
